Dark Mode y corrections

--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -1,4 +1,5 @@
 @keyframes articulo{
-    0% {transform: rotate(0deg) scale(1)}
-    100% {transform: rotate(4deg) scale(1,1.11);}
+    0% {transform: scale(1)}
+    50% {transform:  scale(1,1.11);}
+    100% {transform: scale(1)}
 }
