--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,5 @@
 /* Colors */
 $primary-color: #5e725f;
 $secondary-color: black;
+
+$dark-bg: #0c0c0c;
