--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,7 @@
         background: $primary-color;
     }
 
+
     h1{
         font-family:Georgia, 'Times New Roman', Times, serif;
         font-size: 40px;
@@ -77,6 +78,12 @@
         @include flex-direction(column);
     }
 
+    #modoOscuro:checked ~ .item_2 {
+        background-image: linear-gradient(to right,#000000,#5d815d, #000000);
+        color: black;
+    }
+
+
     .item_3{
         grid-area: footer;
         background-color: $secondary-color;
@@ -92,6 +99,27 @@
     }
 
     /*----------- Nav -----------------*/
+    .navar__color{
+        background-color: #ffffff;
+    }
+
+    body:has(#modoOscuro:checked) .navar__color {
+        background-color: #343434;
+      }
+
+    body:has(#modoOscuro:checked) .nav-link {
+        color: white;
+      }
+
+      body:has(#modoOscuro:checked) h1 {
+        color: white;
+      }
+
+      body:has(#modoOscuro:checked) h2 {
+        color: white;
+      }
+      
+
     .logo-images{
         width: 15%;
     }
@@ -148,7 +176,7 @@
         padding: 10px;
     }
 
-    input{
+    .contact-input{
         width: 100%;
     }
     
@@ -294,7 +322,7 @@
         padding: 10px;
     }
 
-    input{
+    .contact-input{
         width: 300%;
     }
 
@@ -445,7 +473,7 @@
         padding: 10px;
     }
 
-    input{
+    .contact-input{
         width: 400%;
     }
 
